# pushups-gymme-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  early_bird.sql  last_wagon.sql  prestart.sh  pyproject.toml
src/: backend_pre_start.py  recalculate_points.py  recalculate_streaks.py  schemas.py
src/admin/: __init__.py  providers.py  views.py
src/alembic/: env.py
src/alembic/versions/: 001_create_users_table_20250414.py  002_add_table_user_pushups_entries_and__20250416.py  003_add_field_is_admin_to_table_users_20250416.py  004_add_table_points_transactions_20250610.py  005_normalization_of_models_users__20250620.py
src/bot/: bot_instance.py  dependencies.py  enums.py  events.py  keyboards.py  main.py  utils.py
src/bot/filters/: admin_command.py  new_users.py
src/bot/handlers/: start.py
src/bot/handlers/group/: __init__.py  general.py  new_users.py  user_sends_collaboration.py  user_sends_quantity.py  user_sends_video.py
src/bot/handlers/group/commands/: __init__.py  report.py  today.py
src/bot/handlers/private/: __init__.py  start.py  stats.py  today_report.py
src/bot/middlewares/: db.py  events.py  throttling.py  user.py  user_context.py
src/core/: config.py  logging.py  redis.py  strings.py  utils.py
src/db/: base.py  commands.py  mixins.py  models.py
src/worker/: main.py
