[project]
name = "pushups-gymme-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0",
    "alembic>=1.15.2",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pytz>=2025.2",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "taskiq-aiogram>=0.3.1",
    "taskiq-redis>=1.0.5",
    "tenacity>=9.1.2",
]
